--- a/rapsteam/common/templates/protocol_pdf.html
+++ b/rapsteam/common/templates/protocol_pdf.html
@@ -62,7 +62,6 @@
         .attachment li {
             padding-left: 10px;
         }
-        
     </style>
     
 </head>
@@ -102,11 +101,34 @@
     <div class="section">
         <p>
             <strong>
-                3. Przedmiotem/ami odbioru w ramach Umowy nr: &nbsp;&nbsp;{{ contract_number }}&nbsp;&nbsp; jest/są: Przedmioty znajdują się w załączniku poniżej
+                3. Przedmiotem/ami odbioru w ramach Umowy nr: &nbsp;&nbsp;{{ contract_number }}&nbsp;&nbsp; jest/są:
             </strong>
         </p>
     </div>
-    
+    <table>
+        <tr>
+            <th style="width: 4%">Lp</th>
+            <th style="width: 24%">Nazwa przedmiotu</th>
+            <th style="width: 6%">Ilość</th>
+            <th style="width: 15%">Nr Seryjny</th>
+            <th style="width: 20%">Świadectwo jakości</th>
+            <th style="width: 30%">Uwagi</th>
+        </tr>
+        {% for item in school_equipment %}
+        <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>{{ item.name }}</td>
+            <td>{{ item.quantity }}</td>
+            <td style="padding: 2px">
+                {% for number in item.serial_numbers_list %}
+                {{ number }}<br>
+                {% endfor %}
+            </td>
+            <td>{{ item.delivery_status }}</td>
+            <td>{{ item.comment }}</td>
+        </tr>
+        {% endfor %}
+    </table>
     <div class="section">
         <table class="attachment">
             <tr>
@@ -230,36 +252,6 @@
             </tr>
         </table>
     </div>
-    <div class="section" style="page-break-before: always;">
-        <p>
-            <strong>
-                3. Załącznik Przedmiotem/ami odbioru w ramach Umowy nr: &nbsp;&nbsp;{{ contract_number }}&nbsp;&nbsp; jest/są:
-            </strong>
-        </p>
-    </div>
-    <table>
-        <tr>
-            <th style="width: 4%">Lp</th>
-            <th style="width: 24%">Nazwa przedmiotu</th>
-            <th style="width: 6%">Ilość</th>
-            <th style="width: 15%">Nr Seryjny</th>
-            <th style="width: 20%">Świadectwo jakości</th>
-            <th style="width: 30%">Uwagi</th>
-        </tr>
-        {% for item in school_equipment %}
-        <tr>
-            <td>{{ forloop.counter }}</td>
-            <td>{{ item.name }}</td>
-            <td>{{ item.quantity }}</td>
-            <td style="padding: 2px">
-                {% for number in item.serial_numbers_list %}
-                {{ number }}<br>
-                {% endfor %}
-            </td>
-            <td>{{ item.delivery_status }}</td>
-            <td>{{ item.comment }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    
 </body>
 </html>
